--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         </div>
       </div>
       <div class="container footer_copyright">
-        <div class="p footer_p">MNTN, All rights reserved 2023</div>
+        <div class="p footer_p">Copyright &#169; 2023 joaquin-maria. All Rights Reserved.</div>
       </div>
     </footer>
   </body>
